--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "react-dom": "latest"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.4",
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "autoprefixer": "latest",
     "eslint": "latest",
     "eslint-config-next": "latest",
+    "js-cookie": "^3.0.5",
     "postcss": "latest",
     "tailwindcss": "latest",
     "typescript": "latest"
