--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-config-next": "latest",
     "js-cookie": "^3.0.5",
     "postcss": "latest",
+    "react-icons": "^4.11.0",
     "tailwindcss": "latest",
     "typescript": "latest"
   }
